--- a/blocks/profile/__info-subtitle/profile__info-subtitle.css
+++ b/blocks/profile/__info-subtitle/profile__info-subtitle.css
@@ -7,6 +7,7 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  max-width: 415px;
 }
 
 @media screen and (max-width: 640px) {
@@ -14,5 +15,6 @@
     font-size: 14px;
     text-align: center;
     margin: 14px auto 0;
+    max-width: 282px;
   }
 }
